@@ -1,5 +1,14 @@
 2016-04-05  Simon Pfreundschuh  <simonpf@chalmers.se>
 
+	* arts-2-3-472
+
+	* src/CMakeLists.txt Added macro to signal C++11 support.
+
+	* m_oem.cc Fixed conditional compilation to also work in absence of
+	C++11 support.
+
+2016-04-05  Simon Pfreundschuh  <simonpf@chalmers.se>
+
 	* arts-2-3-471
 
 	Small fix to Oliver's changes to make C++11 autodetection work.
@@ -7,7 +16,6 @@
 	* src/m_oem.cc: Removed conditional compilation macros around x2arts method.
 
 	* src/m_oem.cc: Forwarded display_progress argument to invlib call.
-
 
 2016-04-05  Oliver Lemke  <olemke@core-dump.info>
 
